# sem-covid

./: .env-dev  .gitignore  Makefile  README.md  logging.conf  merge-unrelated-orphan.sh  pyproject.toml  report.html  requirements-airflow.txt  requirements-blacklist.txt  requirements-dev.txt  requirements-ml-torch-group.txt  requirements-prod.txt  requirements.txt  setup.cfg  test_env.sh  testing-cellar.rq
.github/workflows/: main.yml  run_all_tests.yml  run_pylint_code_grading.yml  run_pylint_code_rating.yml  run_unit_tests.yml
adapters/: cellar_adapter.py  es_adapter.py  pwdb_adapter.py
dags/: crawl_eu_action_timeline.py  eurlex_covid19.py  legal_initiatives.py  policy_watch_covid19.py  python_test.py  treaties.py  tuto_laur.py
dagtools/: miniotools.py
doc/: todo
doc/legal_initiative_research/: legal-initiative-ex1.cys  lp_explore_work.rq  readme.md
doc/treaties/: treaties_docs.csv
docker/: .env  docker-compose.yml
docker/airflow/: Dockerfile
docker/ui/: Dockerfile
docs/classifiers/: README.md
docs/data-catalog/: ds_eu_cellar.md  ds_eu_timeline.md  ds_ireland_dataset.md  ds_pwdb.md
docs/data-collection-report/: abstract.tex  disclaimer.tex  monolith.tex  sem-covid-dataset.tex  title.tex
docs/data-model/: unified-model.eapx
docs/enriched_datasets/: README.md  ds_eu_timeline_enriched.7z  ds_ireland_timeline_enriched.7z
docs/language-models/: README.md
docs/sem-covid-datasets/: abstract.tex  monolith.tex  sem-covid-datasets.tex  title.tex
docs/semantic-similarity-explorer-app/: README.md
docs/sparql-query-research/: template_select_cellar_work.rq
eu_action_timeline/: README.md  docker-compose.yml  requirements.txt  scrapy.cfg  v1-output.json
law_fetcher/: __init__.py  config.py
ml_experiments/: __init__.py  config.py
mlflow/: mlflow.py
notebooks/: test_remote.ipynb
requirements/: common.txt  doc.txt  flask.txt  infra.txt  infra1.txt  jupyter.txt  ml.txt  ml1.txt  test.txt
resources/: __init__.py  covid19_eurlex.json  ingest.sh  ingestdocs.sh  ingestmeta.sh  requirements.txt  treaties.json
sc_wrangling/: dictionary_transformation.py  evaluation_metrics.py  mean_vectorizer.py  value_replacement.py
sem_covid/: __init__.py  airflow.cfg  base_config.py  config_resolver.py
services/: ESTool.py  documents.py  search.py
src/: data_cleaner.py  evaluation_metrics.py  feature_selector.py  pwdb_transformer.py
tests/: __init__.py  fake_embedding_model_registry.py  fake_storage.py  fake_store_registry.py  junit_report.xml  minio_connection.py  test_cellar_adapter.py
(+3062 files in other folders)
